# streamlit-apps

./: LICENSE  README.md
.devcontainer/: devcontainer.json
EP HeatPumpWaterToAirEquationFit performance curves/: WAHP.py
EP-WAHP/: README.md  app.py
EP_HeatPumpWaterToAirEquationFit_performance_curves/: README.md
gui_demo/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
gui_demo/custom_pages/: __init__.py  advanced_features.py  charts.py  css_showcase.py  data_display.py  embedding.py  home.py  input_widgets.py  layout_containers.py  resources.py  styling_theming.py  text_markdown.py  utilities.py
iso-11855/: README.md  Start.py  app.py  language_constants.py  requirements.txt
iso-11855/.streamlit/: config.toml
iso-11855/iso_11855/: functions.py  methodology.py  unit_iso_11855_functions.py  unit_iso_11855_methodology.py
iso-11855/pages/: 1_Demo.py  1_ENG.py  2_PL.py
