[project]
name = "streamlit-demo"
version = "1.0.0"
description = "A comprehensive Streamlit feature demonstration project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "Pillow>=10.0.0",
    "black>=25.11.0",
    "pyarrow>=21.0.0",
]
